--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -15,7 +15,7 @@
 
 [Credentials]
 ; Put your token here.  Not "secret".  The secret is not the token.
-Token = bot_token
+Token = MzA2MTU3NTc1ODI3NjE5ODQw.C9_q-Q.ckfpF6aMEC3BuYxICC17tgzeOMg
 ; If you want to use a normal user account instead of a bot account, use these lines instead.
 ; Comment the token line and uncomment the Email/Password lines.
 ;Email = bot_discord@email
